--- a/index.html
+++ b/index.html
@@ -4,78 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLM-to-LLM Communications Vocabulary</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-            max-width: 900px;
-            margin: 0 auto;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            margin-top: 40px;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        p {
-            line-height: 1.6;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            text-decoration: none;
-            font-size: 16px;
-            display: inline-block;
-            transition: background-color 0.3s ease;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            font-size: 14px;
-            color: #777;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
     <h1>LLM-to-LLM Communications Vocabulary</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="vocab.html">Vocabulary Definitions</a></li>
+            <li><a href="#">API Reference</a></li>
+            <li><a href="#">Examples</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
-    <h2>Welcome to the LLM Communications Vocabulary Definitions</h2>
-    <p>
-        This repository contains a framework that helps developers structure communication between large language models (LLMs) and code. It offers a set of vocabulary definitions designed to facilitate LLM-to-LLM interactions using JSON-LD format. By providing a clear structure for defining the types of data being sent and received, this project aims to make the communication between systems and LLMs more transparent and effective.
-    </p>
-    
-    <p>
-        The goal is to enable developers to easily define data contexts that allow LLMs and other systems to understand what type of information is being exchanged, improving clarity and standardisation in the communication process.
-    </p>
-
-    <a href="vocab.html" class="button">Explore Vocabulary Definitions</a>
+    <section>
+        <h2>Welcome to the LLM Communications Vocabulary</h2>
+        <p>
+            This documentation defines the framework for LLM-to-LLM communication, focusing on creating structured interactions using JSON-LD. Developers can extend the framework by defining their own data contexts, making communication clearer and standardised across applications.
+        </p>
+        <a href="vocab.html" class="button">Explore Vocabulary</a>
+    </section>
 </main>
 
 <footer>
-    &copy; 2024 LLM Communications Project. All rights reserved.
+    <p>&copy; 2024 LLM Communications Project. All rights reserved.</p>
 </footer>
 
 </body>
