--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,114 +7,147 @@
     <title>LLM Communication Framework Documentation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Add this inline style to adjust the banner position */
-        body {
-            padding-top: 60px; /* Adjust this value based on your banner height */
-        }
-        header {
-            position: static;
-        }
-        main {
-            margin-top: 1rem; /* Add some space between the banner and the main content */
-        }
-    </style>
 </head>
-<body class="bg-gray-100 font-sans">
-    <header class="bg-blue-600 text-white p-4 shadow-md mb-4">
+<body class="bg-gray-50 font-sans text-gray-800">
+    <header class="bg-white shadow-sm py-4 px-6 mb-8">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">LLM Communication Framework</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="#home" class="hover:text-blue-200">Home</a></li>
-                    <li><a href="#vocabulary" class="hover:text-blue-200">Vocabulary</a></li>
-                    <li><a href="#" class="hover:text-blue-200">API</a></li>
-                    <li><a href="#" class="hover:text-blue-200">Examples</a></li>
+            <h1 class="text-2xl font-bold text-gray-800">LLM Communication Framework</h1>
+            <nav class="hidden md:block">
+                <ul class="flex space-x-6">
+                    <li><a href="#home" class="text-gray-600 hover:text-gray-800 transition-colors">Home</a></li>
+                    <li><a href="#vocabulary" class="text-gray-600 hover:text-gray-800 transition-colors">Vocabulary</a></li>
+                    <li><a href="#api" class="text-gray-600 hover:text-gray-800 transition-colors">API</a></li>
+                    <li><a href="#examples" class="text-gray-600 hover:text-gray-800 transition-colors">Examples</a></li>
                 </ul>
             </nav>
+            <button id="menu-toggle" class="md:hidden">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
         </div>
     </header>
 
-    <main class="container mx-auto p-4">
-        <section id="home" class="mb-12">
-            <div class="bg-white rounded-lg shadow-md p-6 mb-8">
-                <h2 class="text-3xl font-bold mb-4">Welcome to the LLM Communication Framework</h2>
-                <p class="text-lg mb-4">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row">
+        <nav id="side-nav" class="hidden md:block md:w-1/4 lg:w-1/5 xl:w-1/6 pr-8">
+            <ul class="sticky top-8 space-y-2">
+                <li><a href="#home" class="block py-1 text-gray-600 hover:text-gray-800 transition-colors">Home</a></li>
+                <li><a href="#vocabulary" class="block py-1 text-gray-600 hover:text-gray-800 transition-colors">Vocabulary</a></li>
+                <li><a href="#api" class="block py-1 text-gray-600 hover:text-gray-800 transition-colors">API</a></li>
+                <li><a href="#examples" class="block py-1 text-gray-600 hover:text-gray-800 transition-colors">Examples</a></li>
+            </ul>
+        </nav>
+
+        <main class="md:w-3/4 lg:w-4/5 xl:w-5/6">
+            <section id="home" class="mb-12">
+                <h2 class="text-3xl font-bold mb-4 text-gray-800">Welcome to the LLM Communication Framework</h2>
+                <p class="mb-4 text-gray-600">
                     This framework helps developers structure communication between large language models (LLMs) and code. It offers a set of vocabulary definitions designed to facilitate LLM-to-LLM interactions using JSON-LD format.
                 </p>
-                <p class="text-lg mb-4">
+                <p class="mb-4 text-gray-600">
                     By providing a clear structure for defining the types of data being sent and received, this project aims to make the communication between systems and LLMs more transparent and effective.
                 </p>
-                <a href="#vocabulary" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 transition duration-300">Explore Vocabulary Definitions</a>
-            </div>
+            </section>
 
-            <div class="bg-white rounded-lg shadow-md p-6 mb-8">
-                <h2 class="text-2xl font-bold mb-4">Key Features</h2>
-                <ul class="list-disc list-inside space-y-2">
-                    <li>Standardized vocabulary for LLM-to-LLM communication</li>
-                    <li>JSON-LD format for improved context and understanding</li>
-                    <li>Extensible framework for custom application needs</li>
-                    <li>Clear documentation and examples</li>
-                </ul>
-            </div>
-
-            <div class="bg-white rounded-lg shadow-md p-6">
-                <h2 class="text-2xl font-bold mb-4">Getting Started</h2>
-                <p class="mb-4">To start using the LLM Communication Framework, follow these steps:</p>
-                <ol class="list-decimal list-inside space-y-2">
-                    <li>Review the <a href="#vocabulary" class="text-blue-600 hover:underline">vocabulary definitions</a></li>
-                    <li>Explore the API documentation (coming soon)</li>
-                    <li>Check out the examples to see the framework in action</li>
-                    <li>Integrate the framework into your project</li>
-                </ol>
-            </div>
-        </section>
-
-        <section id="vocabulary" class="mb-12">
-            <h2 class="text-3xl font-bold mb-6">Vocabulary Definitions</h2>
-
-            <div id="types" class="mb-8">
-                <h3 class="text-2xl font-bold mb-4">Types</h3>
+            <section id="vocabulary" class="mb-12">
+                <h2 class="text-3xl font-bold mb-4 text-gray-800">Vocabulary Definitions</h2>
                 <div class="space-y-6">
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">Conversation</h4>
-                        <p>A sequence of messages exchanged between two or more participants (Agents or Users) in a coherent dialogue.</p>
+                    <h3 class="text-3xl font-bold mb-4 text-gray-800">Types</h3>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">Conversation</h3>
+                        <p class="text-gray-600">A sequence of messages exchanged between two or more participants (Agents or Users) in a coherent dialogue.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">Message</h4>
-                        <p>A single unit of communication within a conversation, containing content sent from one participant to another.</p>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">Message</h3>
+                        <p class="text-gray-600">A single unit of communication within a conversation, containing content sent from one participant to another.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">Agent</h4>
-                        <p>An AI entity capable of sending and receiving messages in a conversation.</p>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">Agent</h3>
+                        <p class="text-gray-600">An AI entity capable of sending and receiving messages in a conversation.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">User</h4>
-                        <p>A human participant in the conversation, capable of sending and receiving messages.</p>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">User</h3>
+                        <p class="text-gray-600">An AI entity capable of sending and receiving messages in a conversation.</p>
                     </div>
+                    <h3 class="text-3xl font-bold mb-4 text-gray-800">Properties</h3>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">id</h3>
+                        <p class="text-gray-600">Definition: A unique identifier for an entity (Conversation, Message, Agent, or User).
+                            Expected value: A string that uniquely identifies the entity.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">type</h3>
+                        <p class="text-gray-600">Definition: Specifies the type of an entity.
+                            Expected value: One of "Conversation", "Message", "Agent", or "User".</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">conversation</h3>
+                        <p class="text-gray-600">Definition: References the conversation to which a message belongs.
+                            Expected value: The id of a Conversation.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">messages</h3>
+                        <p class="text-gray-600">Definition: An ordered list of messages that make up a conversation.
+                            Expected value: An array of Message objects.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">sender</h3>
+                        <p class="text-gray-600">Definition: The entity (Agent or User) that sent a message.
+                            Expected value: An Agent or User object.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">receiver</h3>
+                        <p class="text-gray-600">Definition: The entity (Agent or User) that a message is intended for.
+                            Expected value: An Agent or User object.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">content</h3>
+                        <p class="text-gray-600">Definition: The main text content of a message.
+                            Expected value: A string containing the message text.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">timestamp</h3>
+                        <p class="text-gray-600">Definition: The date and time when a message was sent or a conversation was started.
+                            Expected value: An ISO 8601 formatted date-time string.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">sequenceNumber</h3>
+                        <p class="text-gray-600">Definition: A number indicating the position of a message within a conversation.
+                            Expected value: A positive integer.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">metadata</h3>
+                        <p class="text-gray-600">Definition: Additional, context-specific information about a message or conversation.
+                            Expected value: An object containing key-value pairs of relevant metadata.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">name</h3>
+                        <p class="text-gray-600">Definition: The name or identifier of an Agent or User.
+                            Expected value: A string representing the name.</p>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                        <h3 class="text-xl font-semibold mb-2 text-gray-800">interactionType</h3>
+                        <p class="text-gray-600">Definition: Categorizes the nature or purpose of a message within the conversation.
+                            Expected value: A string describing the type of interaction (e.g., "Greeting", "Question", "Response", "Conclusion").</p>
+                    </div>
+                    <!-- Add more vocabulary terms here -->
                 </div>
-            </div>
+            </section>
 
-            <div id="properties">
-                <h3 class="text-2xl font-bold mb-4">Properties</h3>
-                <div class="space-y-6">
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">id</h4>
-                        <p>A unique identifier for an entity (Conversation, Message, Agent, or User).</p>
-                        <p class="mt-2"><strong>Expected value:</strong> A string that uniquely identifies the entity.</p>
-                    </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h4 class="text-xl font-bold mb-2">type</h4>
-                        <p>Specifies the type of an entity.</p>
-                        <p class="mt-2"><strong>Expected value:</strong> One of "Conversation", "Message", "Agent", or "User".</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+            <section id="api" class="mb-12">
+                <h2 class="text-3xl font-bold mb-4 text-gray-800">API Documentation</h2>
+                <p class="text-gray-600">API documentation coming soon...</p>
+            </section>
 
-    <footer class="bg-gray-800 text-white p-4 mt-8">
-        <div class="container mx-auto text-center">
+            <section id="examples" class="mb-12">
+                <h2 class="text-3xl font-bold mb-4 text-gray-800">Examples</h2>
+                <p class="text-gray-600">Usage examples coming soon...</p>
+            </section>
+        </main>
+    </div>
+
+    <footer class="bg-gray-100 text-gray-600 py-8 mt-12">
+        <div class="container mx-auto px-4 text-center">
             <p>&copy; 2024 LLM Communication Framework. All rights reserved.</p>
         </div>
     </footer>
