--- a/index.html
+++ b/index.html
@@ -61,71 +61,71 @@
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">Message</h3>
                         <p class="text-gray-600">A single unit of communication within a conversation, containing content sent from one participant to another.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">Agent</h3>
                         <p class="text-gray-600">An AI entity capable of sending and receiving messages in a conversation.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">User</h3>
                         <p class="text-gray-600">An AI entity capable of sending and receiving messages in a conversation.</p>
                     </div>
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Properties</h3>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">id</h3>
                         <p class="text-gray-600">Definition: A unique identifier for an entity (Conversation, Message, Agent, or User).
                             Expected value: A string that uniquely identifies the entity.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">type</h3>
                         <p class="text-gray-600">Definition: Specifies the type of an entity.
                             Expected value: One of "Conversation", "Message", "Agent", or "User".</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">conversation</h3>
                         <p class="text-gray-600">Definition: References the conversation to which a message belongs.
                             Expected value: The id of a Conversation.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">messages</h3>
                         <p class="text-gray-600">Definition: An ordered list of messages that make up a conversation.
                             Expected value: An array of Message objects.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">sender</h3>
                         <p class="text-gray-600">Definition: The entity (Agent or User) that sent a message.
                             Expected value: An Agent or User object.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">receiver</h3>
                         <p class="text-gray-600">Definition: The entity (Agent or User) that a message is intended for.
                             Expected value: An Agent or User object.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">content</h3>
                         <p class="text-gray-600">Definition: The main text content of a message.
                             Expected value: A string containing the message text.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">timestamp</h3>
                         <p class="text-gray-600">Definition: The date and time when a message was sent or a conversation was started.
                             Expected value: An ISO 8601 formatted date-time string.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">sequenceNumber</h3>
                         <p class="text-gray-600">Definition: A number indicating the position of a message within a conversation.
                             Expected value: A positive integer.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">metadata</h3>
                         <p class="text-gray-600">Definition: Additional, context-specific information about a message or conversation.
                             Expected value: An object containing key-value pairs of relevant metadata.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">name</h3>
                         <p class="text-gray-600">Definition: The name or identifier of an Agent or User.
                             Expected value: A string representing the name.</p>
                     </div>
-                    <div class="bg-white rounded-lg shadow-sm p-6"></div>
+                    <div class="bg-white rounded-lg shadow-sm p-6">
                         <h3 class="text-xl font-semibold mb-2 text-gray-800">interactionType</h3>
                         <p class="text-gray-600">Definition: Categorizes the nature or purpose of a message within the conversation.
                             Expected value: A string describing the type of interaction (e.g., "Greeting", "Question", "Response", "Conclusion").</p>
