--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-50 font-sans text-gray-800">
     <header class="bg-white shadow-sm py-4 px-6 mb-8">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold text-gray-800">LLM Communication Framework</h1>
+            <h1 class="text-2xl font-bold text-neutral-100">LLM Communication Framework</h1>
             <nav class="hidden md:block">
                 <ul class="flex space-x-6">
                     <li><a href="#home" class="text-gray-600 hover:text-gray-800 transition-colors">Home</a></li>
