--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
 
-    <div class="container mx-auto px-4 flex flex-col">
+    <div class="container mx-auto px-4 flex flex-col md:fixed">
         <nav id="side-nav" class="hidden md:block md:w-1/4 lg:w-1/5 xl:w-1/6 pr-8">
             <ul class="sticky top-8 space-y-2">
                 <li><a href="#home" class="block py-1 text-gray-600 hover:text-gray-800 transition-colors">Home</a></li>
